--- a/rpcserver/pom.xml
+++ b/rpcserver/pom.xml
@@ -7,6 +7,7 @@
   <groupId>com.aladin.play</groupId>
   <artifactId>rpc-server</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
   <name>rpc-server</name>
   <!-- FIXME change it to the project's website -->
