--- a/rpcserver/rpcserver-provider/pom.xml
+++ b/rpcserver/rpcserver-provider/pom.xml
@@ -28,6 +28,12 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.aladin.play</groupId>
+            <artifactId>rpcserver-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
